# advent2022

./: .gitignore  Cargo.toml  README.md  pyproject.toml
day01/: README.md  pyproject.toml
day01/src/: main.py  main.rs
notebooks/: py010.ipynb  py011.ipynb  py012.ipynb  py020.ipynb  py021.ipynb  py022.ipynb  py030.ipynb  py031.ipynb  py032.ipynb  rs010.ipynb  rs011.ipynb  rs012.ipynb  rs020.ipynb  rs021.ipynb  rs022.ipynb
