[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = ""
authors = ["Kafonek <matt.kafonek@noteable.io>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^6.5.2"
black = "^22.10.0"
nb-black = "^1.0.7"
isort = "^5.10.1"
jupyterlab = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
